[project]
name = "meshtui"
version = "1.0.0"
authors = [
  { name="SAMS0N1TE", email="support@terminalbay.com },
]
description = "A terminal user interface for Meshtastic."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "meshtastic",
    "pyserial",
    "prompt-toolkit",
    "pypubsub",
]

[project.scripts]
meshtui = "main:main"
